objects/ssot__ViolationTypeRelation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Violation Type Relation Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceObjectId__c</fullName>
        <label>Reference Object</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceObjectName__c</fullName>
        <label>Reference Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ViolationTypeId__c</fullName>
        <label>Violation Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512784284_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ViolationTypeRelation_ReferenceObjec_rel</label>
        <referenceTo>ssot__AssessmentQuestionVersion__dlm</referenceTo>
        <relationshipLabel>ViolationTypeRelation_ReferenceObjec_rel</relationshipLabel>
        <relationshipName>rel_1739512784284_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512785087_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ViolationTypeRelation_ViolationTypeI_rel</label>
        <referenceTo>ssot__ViolationType__dlm</referenceTo>
        <relationshipLabel>ViolationTypeRelation_ViolationTypeI_rel</relationshipLabel>
        <relationshipName>rel_1739512785087_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>